<resources>
    <string name="app_name">CovidHackApp</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="we_have_sent_a_verification_code_to">We have sent a verification code to</string>
    <string name="verification_code">Verification code</string>
    <string name="report">Report</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="counter">Counter</string>
    <string name="states">States</string>
    <string name="instructions">Instructions</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="temp">Temperature: do you own a thermometer ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="temperature">Temperature</string>
    <string name="please_choose_the_most_convenient_temperature">Please choose the most convenient temperature:</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="please_choose_all_the_symptoms_you_feel">Please choose all the symptoms you feel</string>
    <string name="fever">Fever</string>
    <string name="dry_cough">Dry cough</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="sore_throat">Sore throat</string>
    <string name="tiredness">Tiredness</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="nasal_congestion">Nasal Congestion</string>
    <string name="runny_nose">Runny nose</string>
    <string name="add_extra_symptoms">Add extra symptoms</string>
    <string name="send_report">Send report</string>
    <string name="starting_day">If you started self-isolation on:</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="end_day">It will end on</string>
    <string name="confirm">Confirm</string>
    <string name="write_your_message">Write your message</string>
</resources>
