<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".counter.CounterActivity">

    <TextView
        android:id="@+id/tvDayOfStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_day"
        android:textSize="30sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvDayOfStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDayOfStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="4/4/2020"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/tvDayOfStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDayOfEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_day"
        android:textSize="30sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvDayOfStartDate"
        app:layout_constraintStart_toStartOf="@id/tvDayOfStart"/>

    <TextView
        android:id="@+id/tvDayOfEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="18/4/2020"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/tvDayOfEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@id/tvDayOfStartDate"
        app:layout_constraintEnd_toEndOf="@id/tvDayOfStartDate"
        app:layout_constraintTop_toBottomOf="@id/tvDayOfStartDate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stop"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tvDayOfStartDate"
        app:layout_constraintEnd_toEndOf="@id/tvDayOfStartDate"
        app:layout_constraintTop_toBottomOf="@id/tvDayOfStartDate"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>